--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,194 @@
-# dependencies
-/node_modules
+###############################################################################
+# Environment Variables & Secrets
+###############################################################################
+
+.env
+.env*.local
+.env.production
+.env.development
+.env.test
+
+###############################################################################
+# Dependencies & Package Managers
+###############################################################################
+
+# Node modules
+node_modules/
 /.pnp
 .pnp.js
+
+# Package manager lock files (keep package-lock.json if using npm)
+yarn.lock
+pnpm-lock.yaml
+bun.lockb
+
+# Yarn
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
 .yarn/install-state.gz
+.pnp.*
 
-# testing
-/coverage
+###############################################################################
+# Build Output & Production
+###############################################################################
 
-# next.js
+# Next.js
 /.next/
 /out/
+.next
+out
 
-# production
+# Production builds
 /build
+/dist
+*.tsbuildinfo
 
-# misc
+# Vercel
+.vercel
+
+###############################################################################
+# Testing & Coverage
+###############################################################################
+
+# Testing
+/coverage
+.nyc_output
+*.lcov
+
+# Jest
+.jest/
+
+###############################################################################
+# IDE & Editor Files
+###############################################################################
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# IntelliJ IDEA / WebStorm
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+.\#*
+
+###############################################################################
+# Operating System Files
+###############################################################################
+
+# macOS
 .DS_Store
-*.pem
+.AppleDouble
+.LSOverride
+._*
 
-# debug
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+###############################################################################
+# Logs & Debug Files
+###############################################################################
+
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# local env files
-.env*.local
+# Debug
+*.pem
+*.key
+*.cert
 
-# vercel
-.vercel
+###############################################################################
+# Database & Prisma
+###############################################################################
 
-# typescript
+# Prisma
+prisma/migrations/*.sql
+migrations/
+!prisma/migrations/migration_lock.toml
+
+# Database dumps
+*.sql
+*.db
+*.sqlite
+*.sqlite3
+
+###############################################################################
+# Temporary & Cache Files
+###############################################################################
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.temp/
+
+# OS generated files
+.DS_Store?
+ehthumbs.db
+Icon?
+
+###############################################################################
+# TypeScript
+###############################################################################
+
+# TypeScript build info
 *.tsbuildinfo
 next-env.d.ts
 
-# ENV
-.env
+###############################################################################
+# Misc
+###############################################################################
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache
+.parcel-cache
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
