--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webflix",
+  "name": "flix",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.7.1",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -27,13 +29,15 @@
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.7.1",
+    "pg": "^8.11.3",
+    "prisma": "^7.0.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
