--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,10 @@
-# For server-side applications with Prisma, it is recommended to use service_role key
-# Find it in Supabase Dashboard → Project Settings → Database → Connection string (URI)
-# Use connection string with service_role to bypass RLS on the server side
-DATABASE_URL="postgresql://postgres.xxxxx:[SERVICE_ROLE_KEY]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres"
+DATABASE_URL="YOUR_DATABASE_URL"
 
-# Alternatively, if using regular connection string, make sure RLS policies are configured
-# DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres"
+NEXTAUTH_JWT_SECRET="NEXT_JWT_SECRET"
+NEXTAUTH_SECRET="...SECRET"
 
-NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
-NEXTAUTH_SECRET="NEXT-SECRET"
+GITHUB_ID="YOUR_GITHUB_ID"
+GITHUB_SECRET="...SECRET"
 
-GITHUB_ID=""
-GITHUB_SECRET=""
-
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
+GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
+GOOGLE_CLIENT_SECRET="...SECRET"
