--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
-DATABASE_URL="YOUR_DATABASE_URL"
+# Database connection string from Supabase
+# Get it from: Project Settings → Database → Connection string (URI)
+DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres"
 
-NEXTAUTH_JWT_SECRET="NEXT_JWT_SECRET"
-NEXTAUTH_SECRET="...SECRET"
+# NextAuth Configuration
+NEXTAUTH_JWT_SECRET="your-jwt-secret-here"
+NEXTAUTH_SECRET="your-nextauth-secret-here"
 
-GITHUB_ID="YOUR_GITHUB_ID"
-GITHUB_SECRET="...SECRET"
+# OAuth Providers (optional)
+GITHUB_ID="your-github-client-id"
+GITHUB_SECRET="your-github-client-secret"
 
-GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
-GOOGLE_CLIENT_SECRET="...SECRET"
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
